Added a initial loading screen to fetch the profile from firebase before switching to MainActivity or InitialSetupActivity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,19 @@
         android:theme="@style/Theme.PlaceHolder"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name">
+            android:name=".LoadingScreenActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+        </activity>
+
+
 
         <activity android:name=".InitialSetupActivity" />
         <activity android:name=".events.EnterEventDetailsActivity" />
