--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         </activity>
 
         <activity android:name=".InitialSetupActivity" />
+        <activity android:name=".ProfileEditActivity"/>
+        <activity android:name=".AdminHomeActivity"/>
     </application>
 
 </manifest>
