Update .gitignore to exclude additional generated files
The .gitignore file has been updated to ignore two additional files generated by the IDE: androidTestResultsUserPreferences.xml and uiDesigner.xml.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 /.idea/assetWizardSettings.xml
 /.idea/deploymentTargetDropDown.xml
 /.idea/misc.xml
+/.idea/androidTestResultsUserPreferences.xml
+/.idea/uiDesigner.xml
 .DS_Store
 /build
 /captures
