fixed notification button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,7 @@
         <activity android:name=".ProfileEditActivity"/>
         <activity android:name=".AdminHomeActivity"/>
         <activity android:name=".ui.events.uploadPosterActivity"/>
+        <activity android:name=".ui.notifications.NotificationsFragment"/>
     </application>
 
 </manifest>
