--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,8 @@
         <activity android:name=".AdminHomeActivity"/>
         <activity android:name=".ui.events.UploadPosterActivity"/>
         <activity android:name=".ui.notifications.NotificationsFragment"/>
-        <activity android:name=".ui.events.generateQRCodesActivity"/>
+        <activity android:name=".ui.events.GenerateQRCodesActivity"/>
+        <activity android:name=".ui.events.ViewQRCodesActivity"/>
     </application>
 
 </manifest>
