--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PlaceHolder"
+        android:theme="@style/AppTheme"
         tools:targetApi="31">
 
 <!--    &lt;!&ndash; Configure Google Play services automatically download the scanner module-->
@@ -29,7 +29,7 @@
 <!--        <meta-data-->
 <!--            android:name="com.google.mlkit.vision.DEPENDENCIES"-->
 <!--            android:value="barcode_ui"/>-->
-        <activity android:name=".qrcode.QRcodeScanner">
+        <activity android:name=".qrcode.QRCodeScannerActivity">
             <!-- Add any necessary intent filters or other configurations here -->
         </activity>
 
