Refactor code to organize class files and improve structure
Removed 'CreatedEventsAdapter' and 'JoinedEventsAdapter', and restructured several class files into better organized subpackages. This is to enhance code maintainability by grouping related classes, such as 'EnterEventDetailsActivity' and 'UploadPosterActivity', under a new 'creation' subpackage. 'AdminHomeActivity' and 'QRCodeScannerActivity' classes were also moved to the 'admin' and 'codescanner' subpackages respectively.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
 <!--        <meta-data-->
 <!--            android:name="com.google.mlkit.vision.DEPENDENCIES"-->
 <!--            android:value="barcode_ui"/>-->
-        <activity android:name=".qrcode.QRCodeScannerActivity">
+        <activity android:name=".ui.codescanner.QRCodeScannerActivity">
             <!-- Add any necessary intent filters or other configurations here -->
         </activity>
 
@@ -49,10 +49,10 @@
 
 
         <activity android:name=".InitialSetupActivity" />
-        <activity android:name=".ui.events.EnterEventDetailsActivity" />
+        <activity android:name=".ui.events.creation.EnterEventDetailsActivity" />
         <activity android:name=".ProfileEditActivity"/>
-        <activity android:name=".AdminHomeActivity"/>
-        <activity android:name=".ui.events.UploadPosterActivity"/>
+        <activity android:name=".ui.admin.AdminHomeActivity"/>
+        <activity android:name=".ui.events.creation.UploadPosterActivity"/>
         <activity android:name=".ui.notifications.NotificationsFragment"/>
     </application>
 
