event_check_in works now
had to redo a few of the functions to get it all working, but its working properly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,7 @@
         <activity android:name=".AdminHomeActivity"/>
         <activity android:name=".ui.events.UploadPosterActivity"/>
         <activity android:name=".ui.notifications.NotificationsFragment"/>
+        <activity android:name=".ui.events.ViewEventDetailsActivity"/>
     </application>
 
 </manifest>
