added the other event signup

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         <activity android:name=".ui.events.UploadPosterActivity"/>
         <activity android:name=".ui.notifications.NotificationsFragment"/>
         <activity android:name=".ui.events.ViewEventDetailsActivity"/>
+        <activity android:name=".ui.events.EventSignUpActivity"/>
     </application>
 
 </manifest>
