--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Theme.PlaceHolder"
         tools:targetApi="31">
 
 <!--    &lt;!&ndash; Configure Google Play services automatically download the scanner module-->
@@ -29,7 +29,7 @@
 <!--        <meta-data-->
 <!--            android:name="com.google.mlkit.vision.DEPENDENCIES"-->
 <!--            android:value="barcode_ui"/>-->
-        <activity android:name=".ui.codescanner.QRCodeScannerActivity">
+        <activity android:name=".qrcode.QRcodeScanner">
             <!-- Add any necessary intent filters or other configurations here -->
         </activity>
 
@@ -49,10 +49,10 @@
 
 
         <activity android:name=".InitialSetupActivity" />
-        <activity android:name=".ui.events.creation.EnterEventDetailsActivity" />
+        <activity android:name=".ui.events.EnterEventDetailsActivity" />
         <activity android:name=".ProfileEditActivity"/>
-        <activity android:name=".ui.admin.AdminHomeActivity"/>
-        <activity android:name=".ui.events.creation.UploadPosterActivity"/>
+        <activity android:name=".AdminHomeActivity"/>
+        <activity android:name=".ui.events.UploadPosterActivity"/>
         <activity android:name=".ui.notifications.NotificationsFragment"/>
         <activity android:name=".ui.events.ViewEventDetailsActivity"/>
         <activity android:name=".ui.events.EventSignUpActivity"/>
