--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,8 +46,6 @@
             android:exported="true">
         </activity>
 
-
-
         <activity android:name=".InitialSetupActivity" />
         <activity android:name=".ui.events.creation.EnterEventDetailsActivity" />
         <activity android:name=".ProfileEditActivity"/>
@@ -57,6 +55,7 @@
         <activity android:name=".ui.events.ViewEventDetailsActivity"/>
         <activity android:name=".ui.events.EventSignUpActivity"/>
         <activity android:name=".ui.events.GenerateInfoCheckinActivity"/>
+        <activity android:name=".ui.events.event_menu.PreviewEventActivity" />
     </application>
 
 </manifest>
