Made the View QR Codes page page
QR codes will be shared to external applications in the access qr code page.

Used a recycler view (viewpageradapter) to swipe through the two qr codes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,8 @@
         <activity android:name=".ui.events.ViewEventDetailsActivity"/>
         <activity android:name=".ui.events.EventSignUpActivity"/>
         <activity android:name=".ui.events.GenerateInfoCheckinActivity"/>
-        <activity android:name=".ui.events.event_menu.PreviewEventActivity" />
+        <activity android:name=".ui.events.creation.PreviewEventActivity" />
+        <activity android:name=".ui.events.ViewQRCodesActivity"/>
     </application>
 
 </manifest>
