Created Event Menu Page
And  linked view qr codes page.
Still need to make and link all other pages

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,8 @@
         <activity android:name=".ui.events.GenerateInfoCheckinActivity"/>
         <activity android:name=".ui.events.creation.PreviewEventActivity" />
         <activity android:name=".ui.events.ViewQRCodesActivity"/>
+        <activity android:name=".ui.events.EventMenuActivity"/>
+
     </application>
 
 </manifest>
