--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,7 @@
         <activity android:name=".ui.events.creation.PreviewEventActivity" />
         <activity android:name=".ui.events.ViewQRCodesActivity"/>
         <activity android:name=".ui.events.EventMenuActivity"/>
+        <activity android:name=".Location.Successful_Checked_In_Activity"/>
 
     </application>
 
