--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 <!--    Declaring that the app uses hardware on the phone, in our case the phone's camera -->
 <!--    <uses-feature android:name="android.hardware.camera.any"/>-->
     <uses-permission android:name="android.permission.CAMERA"/>
-
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false"/>
