Added functionality to third button Organized and created new organized events page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,7 @@
         <activity android:name=".ui.events.EventMenuActivity"/>
         <activity android:name=".Location.Successful_Checked_In_Activity"/>
         <activity android:name=".ui.events.EventExplore" />
+        <activity android:name=".ui.events.EventOrganized" />
 
 
     </application>
