--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
 
         <activity android:name=".ui.events.organizer_info.ViewAttendeeCheckinActivity" />
         <activity android:name=".InitialSetupActivity" />
-        <activity android:name=".ui.events.creation.EnterEventDetailsActivity" />
+        <activity android:name=".ui.events.creation.EnterEventDetailsActivity" android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ProfileEditActivity"/>
         <activity android:name=".ui.admin.AdminHomeActivity"/>
         <activity android:name=".ui.events.creation.UploadPosterActivity"/>
