--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"  />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -71,6 +70,7 @@
         <activity android:name=".Location.Successful_Checked_In_Activity"/>
         <activity android:name=".ui.events.EventExplore" />
         <activity android:name=".ui.events.EventOrganized" />
+        <activity android:name=".Location.MapDisplay_activity"/>
 
 
     </application>
