--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,7 @@
         <activity android:name=".ui.events.EventExplore" />
         <activity android:name=".ui.events.EventOrganized" />
 
-        <activity android:name="ca.cmput301t05.placeholder.ui.events.ViewMilestonesActivity" />
+        <activity android:name=".ui.events.ViewMilestonesActivity" />
 
         <activity android:name=".Location.MapDisplay_activity"/>
 
