Moved Successful_Checked_In_Activity to a structured path
Successfully_Checked_In_Activity java class moved to ui/events/checkin/SuccessfulCheckinActivity for better package structuring. This ensures that all event-related activities are grouped together under ui.events, improving code organization. Import statements and references to the moved class in the code have been modified accordingly.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,7 +69,7 @@
         <activity android:name=".ui.notifications.UserNotificationActivity"/>
         <activity android:name=".ui.events.ViewQRCodesActivity"/>
         <activity android:name=".ui.events.EventMenuActivity"/>
-        <activity android:name=".Location.Successful_Checked_In_Activity"/>
+        <activity android:name=".ui.events.checkin.SuccessfulCheckinActivity"/>
 
         <activity android:name=".ui.events.ViewMilestonesActivity" />
 
