added feature to allow a user to subscribe to a topic aka event

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
         </activity>
 
         <service
-            android:name=".java.MyFirebaseMessagingService"
+            android:name=".database.firebaseMessaging.FirebaseMessaging"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
