Remove deprecated layout files and classes
Deleted several XML files based on an update in design, hence these layouts were deemed not necessary anymore. The removed layout files include event_generate_info_checkin.xml, event_infor_view_and_signup.xml, and event_menu.xml. Corresponding Java classes were also removed for retaining the consistency of the project structure, i.e., EventDetailsDialogFragment.java, PreviewEventActivity.java, and PreviewEventFragment.java.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:targetApi="31">
+        android:enableOnBackInvokedCallback="true"
+        tools:targetApi="33">
 
 <!--    &lt;!&ndash; Configure Google Play services automatically download the scanner module-->
 <!--         to the device while the app is installed from the Play Store &ndash;&gt;-->
