--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+<!--            android:launchMode="singleTask">-->
         </activity>
 
         <activity android:name=".ui.events.organizer_info.ViewSignUpsActivity"/>
