Reapply "Merge branch 'main' into push_notifications"
This reverts commit 936c11ac24d7ae1fed24e5cde1a44885a0e25051.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:targetApi="31">
+        android:enableOnBackInvokedCallback="true"
+        tools:targetApi="33">
 
 <!--    &lt;!&ndash; Configure Google Play services automatically download the scanner module-->
 <!--         to the device while the app is installed from the Play Store &ndash;&gt;-->
@@ -67,6 +68,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+<!--            android:launchMode="singleTask">-->
         </activity>
 
         <meta-data
@@ -86,19 +88,19 @@
         <activity android:name=".ProfileEditActivity"/>
         <activity android:name=".ui.admin.AdminHomeActivity"/>
         <activity android:name=".ui.notifications.NotificationsFragment"/>
-        <activity android:name=".ui.events.ViewEventDetailsActivity"/>
-        <activity android:name=".ui.events.EventSignUpActivity"/>
         <activity android:name=".ui.notifications.EventNotificationPageActivity"/>
         <activity android:name=".ui.notifications.UserNotificationActivity"/>
         <activity android:name=".ui.events.ViewQRCodesActivity"/>
         <activity android:name=".ui.events.EventMenuActivity"/>
-        <activity android:name=".Location.Successful_Checked_In_Activity"/>
+        <activity android:name=".ui.events.checkin.SuccessfulCheckinActivity"/>
 
         <activity android:name=".ui.events.ViewMilestonesActivity" />
 
         <activity android:name=".Location.MapDisplay_activity"/>
 
-
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
 
     </application>
