--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,7 +99,7 @@
 
         <activity android:name=".ui.events.ViewMilestonesActivity" />
 
-        <activity android:name=".Location.MapDisplay_activity"/>
+        <activity android:name=".ui.events.organizer_info.MapDisplayActivity"/>
 
         <meta-data
             android:name="preloaded_fonts"
